# OMI-Data-Pipeline

./: .buildinfo  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GETTING_STARTED.md  README.md  SECURITY.md  Taskfile.yml  coverage.yml  deployment.html  docker-compose.yml  genindex.html  index.html  objects.inv  requirements-dev.txt  run-playwright.sh  search.html  searchindex.js  test_dco.txt  test_dco_manual.txt
modules/odr_api/: Taskfile.api.yml  Taskfile.yml  pyproject.toml  requirements.txt  run_server.ps1
modules/odr_api/docker/: Dockerfile.api
modules/odr_api/odr_api/: app.py  logger.py  main.py
modules/odr_api/scripts/: run_server.ps1  start_server.sh  stop_server.sh
modules/odr_api/server/: Taskfile.yml  main.py  pyproject.toml  requirements.txt
modules/odr_api/server/server/: main.py
modules/odr_api/server/tests/: test_user_api.py
modules/odr_api/tests/: Taskfile.api.test.yml  Taskfile.api.yml  Taskfile.yml  test_user_api.py
modules/odr_api/tests/integration/: README.md  base_integration_test.py  run_integration.py  test_result.py
modules/odr_caption/: .dockerignore  .env.caption.template  README.md  Taskfile.caption.yml  Taskfile.yml  endpoints-entrypoint.sh  instructions.md  pyproject.toml  requirements.txt
modules/odr_caption/aria/: aria_inference_vllm.py  prompt.py
modules/odr_caption/cookbook/: basic_caption.ipynb
modules/odr_caption/docker/: Dockerfile.caption  caption.docker-compose.yml
modules/odr_caption/odr_caption/agents/: ImageCaptioner.py
modules/odr_caption/odr_caption/models/: get_model.py  get_vision_model.py
modules/odr_caption/odr_caption/outlines/: StructuredCaption.py  caption.py  get_model.py  vision.py
modules/odr_caption/odr_caption/schemas/: __init__.py  caption.py  vllm_schemas.py
modules/odr_caption/odr_caption/server/: app.py
modules/odr_caption/odr_caption/utils/: logger.py  message_logger.py
modules/odr_caption/test/: NOTICE.md  smoke.py
modules/odr_caption/vllm_deploy/: .gitignore  Taskfile.vllm.yml  requirements.txt
modules/odr_caption/vllm_deploy/models/: run_pixtral.sh  run_vllm.sh  vllm_deployment.md
modules/odr_caption/vllm_deploy/vllm_sandbox/: requirement_calc.ipynb
modules/odr_core/: Taskfile.core.yml  Taskfile.yml  alembic.ini  architecture.md  pyproject.toml  pytest.ini  requirements.txt
modules/odr_core/alembic/: env.py
modules/odr_core/alembic/versions/: 3e141c1abc3f_add_annotations_and_embedding_models.py  6f85df1a1521_add_team_user_relationship.py  ddb9c9a9ecce_add_content_and_contentauthor_tables.py
modules/odr_core/odr_core/: config.py  database.py  enums.py  utils.py
modules/odr_core/odr_core/crud/: annotation.py  content.py  content_event.py  content_report.py  content_set.py  embedding.py  team.py  user.py
modules/odr_core/odr_core/models/: __init__.py  annotation.py  base.py  content.py  embedding.py  feature_toggle.py  team.py  user.py
modules/odr_core/odr_core/schemas/: annotation.py  (+6 more)
modules/odr_core/tests/: conftest.py  test_config.py  test_content_model.py  test_database.py  test_db_manager.py  test_user.py  test_user_crud.py
modules/odr_monitoring/: README.md  Taskfile.monitoring.yml  Taskfile.yml  pyproject.toml  requirements.txt
modules/odr_monitoring/odr_monitoring/: __init__.py  config.py  logger.py
modules/odr_monitoring/tests/: test_logger.py
(+518 files in other folders)
