[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69.0",
  "wheel",
]

[project]
description = "This module contains logic for open data repository server."
name = "odr_api"
version = "0.1.0"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = [
  "odr_api",
]

[tool.setuptools.packages.find]
include = ["odr_api", "odr_api.*"]  # include the .xslt files
exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
"odr_api" = ["py.typed"]
