[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69.0",
  "wheel",
]

[project]
description = "odr_caption"
name = "odr_caption"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = [
  "odr_caption",
]

[tool.setuptools.packages.find]
include = ["odr_caption", "odr_caption.*"]
exclude = [""]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
"genworker" = ["py.typed"]
