[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69.0",
  "wheel",
]

[project]
description = "This module contains logic for open data repository core."
name = "odr_core"
version = "0.1.0"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = [
  "odr_core",
]

[tool.setuptools.packages.find]
include = ["odr_core", "odr_core.*"]  # include the .xslt files
exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
"odr_core" = ["py.typed"]
