[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69.0",
  "wheel",
]

[project]
description = "This module contains logic for open data repository monitoring and logging."
name = "odr_monitoring"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = [
  "odr_monitoring",
]

[tool.setuptools.packages.find]
include = ["odr_monitoring", "odr_monitoring.*"] # include the .xslt files
exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
"odr_monitoring" = ["py.typed"]
